<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activityMain"
    android:background="@drawable/m3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_buttons"
            android:textSize="25dp"
            android:text="@string/Play" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/gradient_buttons"
            android:textSize="25dp"
            android:text="@string/Settings" />

        <Button
            android:id="@+id/btnResultsTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_buttons"
            android:layout_marginTop="30dp"
            android:textSize="25dp"
            android:text="@string/ResultsTable" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>